fix video and sizing on mobile

--- a/wp-content/themes/redleaf/sass/virtual-tour.scss
+++ b/wp-content/themes/redleaf/sass/virtual-tour.scss
@@ -762,11 +762,15 @@ a:hover {
 	font-size: .55rem;
 	letter-spacing: .3rem;
 	margin-top: .25rem;
+	@media screen and (max-width: 767px) {
+		font-size: .525rem;
+		letter-spacing: .2rem;
+	}
 }
 
 @media screen and (max-width: 767px) {
 	#loaderStep1 .loader-container span:last-child {
-		max-width: 260px;
+		max-width: 320px;
 	}
 }
 
@@ -890,7 +894,7 @@ a:hover {
 		width: 100%;
 		height: auto;
 		flex-direction: row;
-		padding: 7rem 1rem .5rem;
+		padding: 1rem 1rem .5rem;
 		justify-content: center;
 		align-items: flex-start;
 	}
@@ -1102,7 +1106,7 @@ a:hover {
 /* @media screen and (max-width: 995px) , screen and (max-height: 700px) */
 @media screen and (max-width: 700px),
 screen and (max-height: 600px) {
-	.loader>div:not(:last-child) {
+	.loader>div:not(:last-child):not(.loader-header) {
 		margin-bottom: 50px;
 	}
 
@@ -1114,7 +1118,7 @@ screen and (max-height: 600px) {
 @media screen and (max-width: 700px),
 screen and (max-height: 465px) {
 
-	.loader>div:not(:last-child) {
+	.loader>div:not(:last-child):not(.loader-header) {
 		margin-bottom: 20px;
 	}
 
